--- a/2_Dantzig_Selector.ipynb
+++ b/2_Dantzig_Selector.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Question:** Vérifier que le problème et les contraintes peuvent se formuler via des [fonctions disponibles](hhttps://www.cvxpy.org/examples/index.html) pour CVXPY."
+    "> **Question:** Vérifier que le problème et les contraintes peuvent se formuler via des [fonctions disponibles](https://www.cvxpy.org/examples/index.html) pour CVXPY."
    ]
   },
   {
