--- a/2_Dantzig_Selector.ipynb
+++ b/2_Dantzig_Selector.ipynb
@@ -165,7 +165,7 @@
     "    m,n = X.shape\n",
     "     \n",
     "    alpha = 0.05\n",
-    "    kappa = c*scipy.stats.norm.ppf(1-alpha/m)\n",
+    "    kappa = c*scipy.stats.norm.ppf(1-alpha/(2*m))\n",
     "\n",
     "    #### TODO\n",
     "    \n",
