--- a/1_Diet.ipynb
+++ b/1_Diet.ipynb
@@ -10,8 +10,7 @@
     "<td><center><h1>Introduction à la Recherche Opérationelle</h1><br/>M2 Statistique Science des Données (SSD)</center></td>\n",
     "<td width=15%>\n",
     "<a href=\"https://www-ljk.imag.fr/membres/Anatoli.Iouditski/\" style=\"font-size: 16px; font-weight: bold\">Anatoli Juditsky</a><br/>\n",
-    "<a href=\"http://www.iutzeler.org\" style=\"font-size: 16px; font-weight: bold\">Franck Iutzeler</a><br/>\n",
-    "Version Py2019 </td>\n",
+    "<a href=\"http://www.iutzeler.org\" style=\"font-size: 16px; font-weight: bold\">Franck Iutzeler</a><br/></td>\n",
     "</tr>\n",
     "</table>"
    ]
@@ -29,9 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Récupération des données\n",
+    "# 1- Récupération des données\n",
     "\n",
-    "### a. Menu"
+    "## Menu"
    ]
   },
   {
@@ -53,6 +52,13 @@
    "source": [
     "foods = pd.read_csv(\"data/food.dat\",sep='\\t')\n",
     "n,p = foods.shape "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le tableau `foods` contient tous les aliments présent à la carte d'un restaurant avec leurs informations nutritionelles."
    ]
   },
   {
@@ -98,7 +104,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1%_Low_Fat_Milk_Jug 1_carton_(236_ml)         ...</td>\n",
        "      <td>100</td>\n",
        "      <td>20</td>\n",
@@ -114,7 +120,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Apple_Slices 1.2_oz_(34_g)                    ...</td>\n",
        "      <td>15</td>\n",
        "      <td>0</td>\n",
@@ -130,7 +136,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>BBQ_Ranch_Burger 4.1_oz_(116_g)               ...</td>\n",
        "      <td>350</td>\n",
        "      <td>140</td>\n",
@@ -146,7 +152,7 @@
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Bacon,_Egg_&amp;_Cheese_Bagel 7_oz_(199_g)        ...</td>\n",
        "      <td>630</td>\n",
        "      <td>290</td>\n",
@@ -162,7 +168,7 @@
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Bacon,_Egg_&amp;_Cheese_Bagel_with_Egg_Whites 7.2_...</td>\n",
        "      <td>580</td>\n",
        "      <td>230</td>\n",
@@ -178,7 +184,7 @@
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -194,7 +200,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>300</td>\n",
+       "      <th>300</th>\n",
        "      <td>Vanilla_McCafe_Shake_(12_fl_oz_cup) 12_fl_oz  ...</td>\n",
        "      <td>530</td>\n",
        "      <td>140</td>\n",
@@ -210,7 +216,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>301</td>\n",
+       "      <th>301</th>\n",
        "      <td>Vanilla_McCafe_Shake_(16_fl_oz_cup) 16_fl_oz  ...</td>\n",
        "      <td>660</td>\n",
        "      <td>170</td>\n",
@@ -226,7 +232,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>302</td>\n",
+       "      <th>302</th>\n",
        "      <td>Vanilla_McCafe_Shake_(22_fl_oz_cup) 22_fl_oz  ...</td>\n",
        "      <td>820</td>\n",
        "      <td>210</td>\n",
@@ -242,7 +248,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>303</td>\n",
+       "      <th>303</th>\n",
        "      <td>Vanilla_Reduced_Fat_Ice_Cream_Cone 3.7_oz_(105...</td>\n",
        "      <td>170</td>\n",
        "      <td>40</td>\n",
@@ -258,7 +264,7 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>304</td>\n",
+       "      <th>304</th>\n",
        "      <td>Whipped_Margarine_(1_pat) 1_pkg_(6_g)         ...</td>\n",
        "      <td>40</td>\n",
        "      <td>40</td>\n",
@@ -341,12 +347,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Alimentation idéale"
+    "## Alimentation idéale en termes de nutriments"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nutr = pd.read_csv(\"data/nutr_ideal.dat\",sep=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La tableau `nutr` contient les valeurs pour une alimentation *optimale* en terme de nutriments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +392,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Cal</th>\n",
        "      <th>CalFat</th>\n",
        "      <th>Fat</th>\n",
        "      <th>SatFat</th>\n",
@@ -386,8 +407,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>2500</td>\n",
+       "      <th>0</th>\n",
        "      <td>600</td>\n",
        "      <td>65</td>\n",
        "      <td>20</td>\n",
@@ -405,20 +425,19 @@
        "</div>"
       ],
       "text/plain": [
-       "    Cal  CalFat  Fat  SatFat  Chol  Sodium  Carbo  Protein  VitA  VitC  \\\n",
-       "0  2500     600   65      20   300    2400    300       50   100   100   \n",
+       "   CalFat  Fat  SatFat  Chol  Sodium  Carbo  Protein  VitA  VitC  Calcium  \\\n",
+       "0     600   65      20   300    2400    300       50   100   100      100   \n",
        "\n",
-       "   Calcium  Iron  \n",
-       "0      100   100  "
+       "   Iron  \n",
+       "0   100  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nutr = pd.read_csv(\"data/nutr_ideal.dat\",sep=' ')\n",
     "nutr"
    ]
   },
@@ -426,16 +445,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a. Combinaisons pour une alimentation pauvre en calories\n",
+    "# 2- Trouver un régime optimal\n",
     "\n",
-    "Pour commencer, nous allons essayer de trouver une stratégie $x$ en résolvant un problème `diet1` de minimisation des calories, sous contrainte de rester idéal vis à vis des autres nutriments (CalFat, Fat, VitA, etc.)"
+    "## Combinaisons pour une alimentation pauvre en calories\n",
+    "\n",
+    "Pour commencer, nous allons essayer de trouver une combinaison $x\\in\\mathbb{R}^n$ des aliments ($x_i$ correspondant à la quantité d'aliment $i$ prise) qui minimise le total de calories sous contrainte de rester idéal vis à vis des *nutriments* (CalFat, Fat, VitA, etc.)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Question:** Implementer les fonctions et contraintes suivantes, puis résoudre le problème. Qu'observez-vous sur la solution?"
+    "> **Question:** Formaliser et résoudre le problème décrit ci-dessus. Qu'observez-vous sur la solution?"
    ]
   },
   {
@@ -456,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Contrainte à vérifier: $x$ est positif (par de quantités négatives d'aliments) et $Ax=b$ où $A$ contient les valeurs des nutriments par aliment et $b$ contient les valeurs idéales (sans les calories)"
+    "* Contrainte à vérifier: $x$ est positif (par de quantités négatives d'aliments) et $Ax=b$ où $A$ contient les valeurs des nutriments par aliment et $b$ contient les valeurs idéales"
    ]
   },
   {
@@ -490,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### b. Relaxation des contraintes\n",
+    "## Relaxation des contraintes\n",
     "\n",
     "\n",
     "Le problème précedent n'avait pas de point faisable avec les contraintes imposées. Afin d'obtenir des points faisable, nous allons remplacer la contrainte\n",
@@ -553,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### c. D'autres contraintes\n",
+    "## D'autres contraintes\n",
     "\n",
     "On va imposer:\n",
     "* pas de `EQUAL_0_Calorie_Sweetener 1_pkg_(1.0_g)` (item $73$) ni de `SPLENDA_No_Calorie_Sweetener 1_pkg_(1.0_g) :  30.9360336697206` (item $248$)  car c'est pas très bon\n",
@@ -578,11 +599,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Contrainte suivante"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -595,21 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Contrainte suivante"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. D'autres problèmes"
+    "# 3- D'autres problèmes"
    ]
   },
   {
@@ -651,7 +658,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Programmation entière"
+    "# 4- Programmation entière [*]"
    ]
   },
   {
@@ -665,70 +672,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Retour sur le problème 2b\n",
+    "## Les différences pour la programmation en nombre entier\n",
     "\n",
-    "Les différences pour la programmation en nombre entier:\n",
-    "\n",
-    "* le type de la variable \n",
+    "* le type de la variable qui doit être précisé lors de la déclaration à CVXPY\n",
     "\n",
     "        x = cp.Variable(n,integer=True) \n",
     "\n",
-    "* le solver (qui doit etre capable de faire des MIP), par ex. \"ECOS_BB\" see [https://www.cvxpy.org/tutorial/advanced/index.html#choosing-a-solver](https://www.cvxpy.org/tutorial/advanced/index.html#choosing-a-solver)\n",
-    "\n",
-    "        prob2.solve(verbose=True,solver=\"ECOS_BB\")"
+    "* le solver (qui doit etre capable de faire des MIP) (mais c'est transparent pour nous ici)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "x = cp.Variable(n,integer=True) \n",
-    "\n",
-    "cal = np.array(foods[\"Cal\"]) # calories\n",
-    "\n",
-    "diet1 = cp.Minimize(cal*x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Constraints matrix\n",
-    "A = np.array(foods.drop(columns=[\"Food\",\"Cal\"])).T\n",
-    "b = np.array(nutr)[0,1:12]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contrainte1 = x>=0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contrainte2a = A*x <= 1.0*b \n",
-    "contrainte2b = A*x >= 0.8*b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prob2= cp.Problem(diet1 , constraints = [contrainte1, contrainte2a,contrainte2b])\n",
-    "#prob2.solve(verbose=True,solver=\"ECOS_BB\")"
+    "> **Question:** Reprendre le problème relaxé plus haut (minimisation des calories entre 80% et 100% des contraintes de nutrition) en ajoutant que la variable $x$ est maintenant à valeur entières. Le problème est-il toujours faisable?"
    ]
   },
   {
@@ -736,15 +693,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "prob.status"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Relaxing Constraints\n",
+    "### Relaxation des contraintes\n",
     "\n",
     "Les problemes MIP (Mixed Integer Programs) sont en général beaucoup plus dur car trouver des points admissibles est difficile."
    ]
@@ -753,28 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Question :** Relaxoez les contraintes (ex: 0<=x<=2 et Ax>=b) et observez la solution."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contrainte1a = x>=0\n",
-    "contrainte1b = x<=2\n",
-    "contrainte2b = A*x >= b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prob2= cp.Problem(diet1 , constraints = [contrainte1a, contrainte1b, contrainte2b])\n",
-    "#prob2.solve(verbose=True,solver=\"ECOS_BB\")"
+    "> **Question :** Relaxez des contraintes jusqu'a obtenir un problème faisable et observez la solution."
    ]
   },
   {
